# python_course

./: 02012025.txt  02022025.txt  02082025.txt  02092025.txt  02142025.txt  18Jan2025.txt  19Jan2025.txt  README.md  allpograms.txt  dicegame.py  find_element.py  find_perfectnumber.py  find_permeter.py  findfibonacci.py  fo_print _number_piramid.py  for_find_armstrong.py  for_mathtable.py  for_number_right_inc.py  for_star_piramid.py  list_intersection.py  mathtable.py  practice.py  print_even_number_list.py  printnumbers.py  printstar.py  product_mgmt.py  pyproject.toml  star_piramid.py
Apr/: 04042025.txt
Feb/: 02092025.txt  02152025.txt  02242025.txt  02252025.txt
Jan/: 01112025.txt  01252025.txt
Jun/: 06212025django.txt
Mar/: 03152025.txt  03222025.txt  03232025.txt  03292015.txt
May/: sample.ipynb
May/Node/: color.html  test.js
May/Web tech/: 05202025.txt  web-05172025.txt
May/sample/: 1.py  2.py  3.py  4.py  5.py  6.py  home.ipynb  numpy_examples.ipynb  numpy_learning.py
Tasks/Class/: Inherit_hierarchy.py  bank.py  operator_overloadting.py  polimorph.py  rating_avg.py
Tasks/Dictionary-programs/: dict_find_highest_maths.py  find_ascii.py  find_pallandrome.py  find_upper_ascii.py
Tasks/For-loop-programs/: for_find_perfectnumber.py  for_findfibonacci.py  for_printstar_left_triangle.py
Tasks/Functions/: f_sum.py  (+5 more)
python notes/: 1.class.py  10.class.py  11.class.py  12.class.py  13.class.py  14.class.py  15.class.py  16.class.py  17.class.py  18.class.py  2.class.py  3.class.py  4.class.py  5.class.py  6.class.py  7.class.py  8.class.py  9.class.py
(+40 files in other folders)
