[tool.poetry]
name = "python-course"
version = "0.1.0"
description = "Place holder for all course practive files"
authors = ["Bushan Bengaluru"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
jupyter = "^1.1.1"
notebook = "^7.4.2"
matplotlib = "^3.10.3"
numpy = "^2.2.5"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
