[tool.poetry]
name = "python-course"
version = "0.1.0"
description = "Place holder for all course practive files"
authors = ["Bushan Bengaluru"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
jupyter = "^1.1.1"
notebook = "^7.4.2"
matplotlib = "^3.10.3"
numpy = "^2.2.5"
seaborn = "^0.13.2"
django = "^5.2.3"
django-urls = "^1.1.4"
path = "^17.1.0"
include = "^0.2.2"
pathlib = "^1.0.1"
firstapp = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
